--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
   <title>Python-Todo-Web-App</title>
 </head>
 <body>
+
+  <form action="/todos/create" method="post">
+    <label for="description">Create a ToDo</label>
+    <br>
+    <input type="text" name="description">
+    <input type="submit" value="Create">
+  </form>
+
   <ul>
     {% for d in data %}
     <li>{{ d.description }}</li>
