--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Python-Todo-Web-App</title>
+  <style>
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
-  <form action="/todos/create" method="post">
+  <form id="form">
     <label for="description">Create a ToDo</label>
     <br>
-    <input type="text" name="description">
+    <input id="description" type="text" name="description">
     <input type="submit" value="Create">
   </form>
 
-  <ul>
+  <div id="error" class="hidden">SOMETHING WENT WRONG!!!!</div>
+
+  <ul id="todos">
     {% for d in data %}
     <li>{{ d.description }}</li>
     {% endfor %}
   </ul>
+
+  <!-- <script src="../js/main.js"></script> -->
+  <script>
+    document.getElementById('form').onsubmit = function(e) {
+      e.preventDefault();
+      fetch('todos/create', {
+        method: 'POST',
+        body: JSON.stringify({
+          'description': document.getElementById('description').value
+        }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(function(response) {
+        return response.json()
+      })
+      .then(function(jsonResponse) {
+        console.log(jsonResponse)
+
+        const liItem = document.createElement('li');
+        liItem.innerHTML = jsonResponse['description'];
+        document.getElementById('todos').appendChild(liItem);
+        document.getElementById('error').className = 'hidden';
+      })
+      .catch(function() {
+        document.getElementById('error').className = '';
+      });
+    }
+  </script>
   
 </body>
 </html>
