--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
     .hidden {
       display: none;
     }
+
+    ul {
+      list-style: none;
+    }
   </style>
 </head>
 <body>
@@ -23,12 +27,36 @@
 
   <ul id="todos">
     {% for d in data %}
-    <li>{{ d.description }}</li>
+    <li><input class="check-completed" data-id="{{ d.id }}" type="checkbox"{% if d.completed %} checked {% endif %} >{{ d.description }}</li>
     {% endfor %}
   </ul>
 
   <!-- <script src="../js/main.js"></script> -->
   <script>
+    const checkboxes = document.querySelectorAll('.check-completed');
+    for (let i = 0; i < checkboxes.length; i++) {
+      const checkbox = checkboxes[i];
+      checkbox.onchange = function(e) {
+        console.log('change', e);
+        const newCompletedState = e.target.checked;
+        const todoId = e.target.dataset['id'];
+        fetch('/todos/' + todoId + '/set-completed', {
+          method: 'POST',
+          body: JSON.stringify({
+            'completed': newCompletedState
+          }),
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
+        .then(function() {
+          document.getElementById('error').className = 'hidden';
+        })
+        .catch(function() {
+        document.getElementById('error').className = '';
+      });
+      }
+    }
     document.getElementById('form').onsubmit = function(e) {
       e.preventDefault();
       fetch('todos/create', {
